--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,592 @@
-.activeLink {
-    color: tomato;
-    padding-left: 30px;
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Be Vietnam', sans-serif;
+  box-sizing: border-box;
+  list-style: none;
+}
+body, html {
+  background: linear-gradient(135deg, #f1f2f3 0%, #ffffff 100%);
+}
+:root {
+  --theme-color-main: #80e593;
+  --theme-color-secundary: #52c7cf;
+  --linear-gradient: linear-gradient(135deg,var(--theme-color-main) 0%, var(--theme-color-secundary) 100%);
+}
+.noScroll {
+  overflow: hidden;
+}
+.header {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  background: #f1f2f3;
+  box-shadow: 0 0 30px rgba(56,59,69,.1);
+  height: 80px;   
+  position: sticky;
+  top: 0;
+  z-index: 9;
+}
+.header .contLogo {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+.header .contLogo .logo {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+}
+.header .contUserData {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 30%;
+  max-width: 230px;
+}
+.header .contUserData .userName {
+  opacity: .9;
+  color: #313539;
+  padding: 15px;
+}
+.header .contUserData  .userAvatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  border-radius: 50%;
+  box-shadow: 0 0 30px rgb(56 59 69 / 10%);
+}
+.cleanBtn {
+  display: none;
+}
+.cleanBtn a {
+  width: 50%;
+  min-width: 120px;
+  height: 40px;
+  background: rgba(31,41,51,.8);
+  color: #ffffff;
+  border-radius: 6px;
+  border: none;
+  overflow: hidden;
+  cursor: pointer;
+  font-size: 15px;
+  text-decoration: none;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .4s ease;
+  box-shadow: 0 0 30px rgb(56 59 69 / 20%);
+}
+.cleanBtn a span {
+  position: relative;
+}
+.cleanBtn a:hover {
+  opacity: 1;
+  background: #f1f2f3;
+  color: #314151;
+}
+
+.cleanBtn.active {
+  display: flex;
+  width: 200px;
+  justify-content: flex-end;
+}
+.nav {
+	width: 110px;
+	display: flex;
+	justify-content: flex-end;
+	margin-left: 20px;
+}
+.nav button {
+  width: 50%;
+  min-width: 120px;
+  height: 40px;
+  background: var(--linear-gradient);
+  color: #ffffff;
+  border-radius: 6px 0 0 6px ;
+  border: none;
+  transform: translateX(20px);
+  overflow: hidden;
+  cursor: pointer;
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.header .contUserData .userAvatar img.logo {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.link {
+  color: tomato;
+  cursor: pointer;
+  border-bottom: 1px solid transparent;
+  transition: .4s ease;
+}
+.link:hover {
+  border-bottom: 1px solid tomato;
+}
+.btnGeneral {
+  padding: 10px 15px;
+  border: none;
+  box-shadow: 0 0 30px rgb(56 59 69 / 10%);
+  border-radius: 6px;
+  background: #fafbfc;
+  font-size: 17px;
+  cursor: pointer;
+  transition: .4s ease;
+}
+.btnGeneral:hover {
+  background: #314151;
+  color: #f1f2f3;
+}
+
+.btnGeneral i {
+  padding: 0 15px 0 0;
+}
+.title {
+  font-size: 28px;
+  font-weight: 700;
+  color: #414549;
+}
+.loginPage {
+  width: 100%;
+  height: 100vh;
+  min-height: 768px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loginPage .logo {
+  position: absolute;
+  top: -80px;
+  height: 60px;
+}
+.loginPage .contentLogon {
+  padding: 40px;
+  border-radius: 12px;
+  box-shadow: 0 5px 20px rgb(56 59 69 / 5%), -10px -10px 20px #59645b11, 10px 10px 20px #52c7cf11, 0 2px 6px 2px rgb(56 59 69 / 5%);
+  background: var(--linear-gradient);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+.loginPage .contentLogon div {
+  position: relative;
+}
+.loginPage .contentLogon:before {
+  content: '';
+  background: #fafbfc;
+  position: absolute;
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
+  z-index: 0;
+  border-radius: 10px;
+  opacity: .98;
+}
+.loginPage .contentLogon .contTitle {
+  padding-bottom: 20px;
+  text-align: center;
+  max-width: 280px;
+}
+.contTitle .title {
+  padding-bottom: 15px;
+}
+.contTitle .textBox {
+  opacity: .6;
+  font-size: 15px;
+  color: #414549;
+}
+.contBtnLogin {
+  display: flex;
+  flex-flow: wrap;
+  width: 100%;
+}
+.contBtnLogin > * , .contBtnLogin span {
+  flex: calc(50% - 20px);
+  width: 100%;
+  margin: 5px;
+}
+.contBtnLogin span button {
+  width: 100%;
+}
+
+/* nav.nav {
+  display: none;
+} */
+
+.indexPage {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  max-width: 1024px;
+  margin: auto;
+}
+.indexPage .itemPost {
+  display: flex;
+  flex-flow: column;
+  flex: calc(25% - 20px);
+  width: 100%;
+  max-width: calc(50% - 20px);
+  margin:10px 10px;
+  min-width: 300px;
+  overflow: hidden;
+  border: 1px solid #f1f2f3;
+  border-radius: 12px;
+  box-shadow: 0 5px 20px rgb(56 59 69 / 5%), -10px -10px 20px #59645b11, 10px 10px 20px #52c7cf11, 0 2px 6px 2px rgb(56 59 69 / 5%);
+}
+@media screen and (max-width:460px) {
+  .indexPage .itemPost {
+    max-width: 100%;
+  }
+}
+.itemPost .contImg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 320px;
+  overflow: hidden;
+}
+.itemPost .contImg img {
+  width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+.itemPost .contData {
+  padding: 20px;
+  width: 100%;
+}
+.itemPost .contDataAuthor {
+  display: flex;
+  flex-flow: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.contDataAuthor .contImg {
+  flex:40px;
+  margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.contDataAuthor .contName {
+  flex: calc(100% - 50px);
+  width: calc(100% - 50px);
+}
+.contDataAuthor .name {
+  color: #313539;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.contDataAuthor .name small {
+	display: block;
+	opacity: .5;
+  margin-bottom: -5px;
+  font-size: 10px;
+}
+.contData .contText {
+  width: 100%;
+  margin-bottom: 30px;
+  height: 40px;
+}
+.contData .contText p {
+  font-size: 18px;
+}
+.contData .contLiks, .contData .contComments {
+  width: calc(50% - 3px);
+  display: flex;
+  vertical-align: top;
+  height: 20px;
+  flex-flow: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+.contData .contLiks > span, 
+.contData .contComments > span{
+  color: #313539;
+  font-size: 12px;
+}
+.contData .contLiks > span span,
+.contData .contComments > span span {
+  color: var(--theme-color-secundary);
+  font-weight: 900;
+}
+.contData .contBtnComments {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.contBtnComments button {
+  width: 50%;
+  min-width: 120px;
+  height: 40px;
+  background: var(--linear-gradient);
+  color: #ffffff;
+  border-radius: 6px 0 0 6px ;
+  border: none;
+  transform: translateX(21px);
+  margin-bottom: -40px;
+  overflow: hidden;
+  cursor: pointer;
+  font-size: 15px;
+}
+.contBtnComments button:before, .nav button:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(31,41,51,.8);
+  filter: contrast(2), saturate(5);
+  z-index: -1;
+  top: 0;
+  left: 0;
+  transition: .4s ease;
+  transform: translateX(100%);
+  border-radius: 6px 0 0 6px;
+}
+.contBtnComments button:hover:before, .nav button:hover:before {
+  transform: translateX(0%);
+}
+.contData .contTags {
+  display: block;
+  margin-top: 20px;
+}
+.contData .contTags .tag {
+  padding: 5px 12px;
+  border-radius: 6px;
+  background: #ffffff;
+  border: 1px solid var(--theme-color-main);
+  font-size: 12px;
+  color: #313539;
+  margin-right: 5px;
+  transition: .4s ease;
+  cursor: pointer;
+  font-weight: 400;
+
+}
+.contData .contTags .tag:nth-last-child(1) {
+  margin-right: 0;
+}
+.contData .contTags .tag:hover {
+  background-color: #314151;
+  color: #ffffff;
+}
+.contData .contTags small {
+  display: block;
+  font-size: 10px;
+  opacity: .5;
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+/* load */
+.loader > .contImg, 
+.loader .contName, 
+.loader button { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  background: linear-gradient(135deg, #fff 0%, #f1f2f3 100%);
+  box-shadow: 0 5px 20px rgb(56 59 69 / 2%), -10px -10px 20px #59645b05, 10px 10px 20px #52c7cf05, 0 2px 6px 2px rgb(56 59 69 / 2%);
+  animation: rotateGradient 20s linear infinite forwards;
+  -webkit-backface-visibility: hidden;
+}
+
+.loader .contLiks, 
+.loader .contComments,
+.loader .contText,
+.loader .contImg,
+.loader .contTags span {
+  background: linear-gradient(135deg, #f1f2f3 0%, #fff 100%);
+  animation: rotateGradient 30s linear infinite forwards;
+  box-shadow: 0 5px 20px rgb(56 59 69 / 2%), -10px -10px 20px #59645b05, 10px 10px 20px #52c7cf05, 0 2px 6px 2px rgb(56 59 69 / 2%);
+}
+
+@keyframes rotateGradient {
+  0% {
+    background-position: 0px 0;
+  }
+  100% {
+    background-position: 100em 0;
+  }
+}
+
+.loader .contName, .loader .contText {
+  height: 40px;
+  border-radius: 6px;
+}
+.loader .contTags span {
+	height: 20px;
+	width: calc(33.333% - 10px);
+	margin: 5px;
+	display: inline-block;
+	vertical-align: top;
+  cursor: pointer;
+}
+
+/*Modal*/
+.modal {
+  top: 0;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	background: rgba(255,255,255,0);
+  z-index: 8;
+  padding-top: 80px;
+  transition: .4s ease;
+}
+.modal.active {
+	background: rgba(255,255,255,.8);
+}
+.modalContainer {
+  position: relative;
+  width: 100%;
+	max-width: 500px;
+	background: var(--linear-gradient);
+	padding: 20px;
+	border-radius: 12px 12px 0 0;
+	max-height: calc(100% - 80px);
+  box-shadow: 0 5px 20px rgb(56 59 69 / 5%), -10px -10px 20px #59645b25, 10px 10px 20px #52c7cf25, 0 2px 6px 2px rgb(56 59 69 / 5%);
+  transition: .4s ease;
+  transform: translateY(calc(100% + 20px));
+}
+.modalContainer.active {
+  transform: translateY(0);
+}
+.modalContainer::before {
+  content: '';
+  position: absolute;
+  background: #f7f8f9;
+  height: calc(100% - 2px);
+  width: calc(100% - 4px);
+  top: 2px;
+  left: 2px;
+	border-radius: 10px 10px 0 0;
+  z-index: -1;
+}
+.modalContainer .contComentItem {
+  display: block;
+  padding: 20px;
+  border: 1px solid #eee;
+  border-radius: 12px;
+  margin-bottom: 10px;
+  background: #fff;
+}
+.modalContainer .contComentItem .contDataAuthor {
+  display: flex;
+  width: 100%;
+  flex-flow: wrap;
+  position: relative;
+}
+.contComentItem .contDataAuthor .contImg {
+  flex:40px;
+  margin-right: 10px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;    
+}
+.contComentItem .contDataAuthor .contImg ~ div {
+  flex:calc(100% - 50px);
+  width: calc(100% - 50px);
+}
+.contComentItem .contDataAuthor .contDate {
+  position: absolute;
+  top: -20px;
+  right: -10px;
+}
+.contDataAuthor .contDate span {
+  font-size: 10px;
+  opacity: .7;
+}
+.modalContainer .contComentItem .contText {
+  margin-top: 10px;
+  padding-left: 50px;
+}
+.contComentItem .contText small {
+  display: block;
+  opacity: .5;
+  letter-spacing: 1px;
+  font-weight: 700;
+  font-size: 10px;
+}
+.closeBtn {
+  position: absolute;
+  top: -20px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  right: -20px;
+  background: #314151;
+  border: none;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
+  transform: rotate(45deg);
+  transition: .4s ease;
+}
+.closeBtn .iconClose {
+  height: 3px;
+  width: 20px;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.closeBtn .iconClose:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  transform: rotate(90deg);
+}
+.closeBtn:hover {
+  transform: rotate(135deg);
+}
+
+/*ErrorPage*/
+.contErrorPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  min-height: 400px;
+}
+.header ~ .contErrorPage {
+  height: calc(100vh - 80px);
+}
+.errorPage {
+  display: block;
+  padding: 20px;
+  width: 440px;
+}
+.errorPage a {
+  margin-top: 20px;
+  display: inline-block;
+  text-decoration: none;
+  color: #314151;
 }
